test_suite/alan-2022-examples/failing/006420_mutation.alan
source w begin leave 36 wF >= 357 end
